# SIGIL

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.render  FRONTEND.md  README.md  backend-spec.md  contexto.md  package.json  render.yaml  vercel.json
.atl/: .skill-registry.cache.json  skill-registry.md
.cargo/: config.toml
api/: health.js
backend/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
backend/scripts/: demo-stdio.ts  x402-demo-http-server.ts  x402-facilitator-sidecar.ts  x402-local-sidecars.ts  x402-payment-fetch-smoke.ts  x402-signer-sidecar.ts
backend/src/: action-methods.ts  cli.ts  client-setup.ts  config.ts  env-file.ts  index.ts  paths.ts  server.ts
backend/supabase/: schema.sql
backend/tests/: agent-identity.test.ts  anchor.test.ts  audit.test.ts  casper-client-discovery.test.ts  cli.test.ts  client-setup.test.ts  env-file.test.ts  file-stores.test.ts  grimoire.test.ts  mcp-stdio.test.ts  memory.test.ts  payments.test.ts  security.test.ts  supabase-stores.test.ts  x402-facilitator.test.ts  x402-resource.test.ts  x402-signer.test.ts  x402.test.ts
contracts/memory-anchor/: Cargo.toml  Makefile  README.md
contracts/memory-anchor/src/: lib.rs
docs-site/: package-lock.json  package.json
docs-site/content/: tool-schemas.mjs
docs-site/docs/: api-schema-reference.md  architecture.md  audit-trail.md  index.md  (+10 more)
frontend/: Documentation.html  app.jsx  hero.jsx  index.html  sections.jsx  try-it.jsx
mainspring-front/: README.md
scripts/: build-public-site.mjs  serve-mainspring-front.mjs
(+52 files in other folders)
