[package]
name = "sigil-memory-anchor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
casper-contract = { version = "=5.1.1", default-features = false }
casper-types = "=6.0.1"
wee_alloc = "=0.4.5"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
